<resources>
    <string name="app_name">ZAMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="enter_user_pwd">Please enter password</string>
    <string name="remember_password">Remember my password</string>
    <string name="login">Login</string>
    <string name="plot_main_home">Plot Homepage</string>
    <string name="plot_list">Land List</string>
    <string name="plot_main_info">Basic Information</string>
    <string name="add_grow_process">Add Data to Record</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="mu">Mu</string>
    <string name="land_num">Total Area</string>
    <string name="unit_npk">kg/Mu</string>
    <string name="unit_organic">g/kg</string>
    <string name="unit_element">mg/kg</string>
    <string name="finish">Finish</string>
    <string name="album">Album</string>
    <string name="preview">Preview</string>
    <string name="unfinished">Unfinished</string>
    <string name="varieties_of">Varieties of</string>
    <string name="tun">Tun</string>
    <string name="crops">Crops</string>
    <string name="annual_yield">Annual Yield</string>
    <string name="province">Province</string>
    <string name="crop">Crop</string>
    <string name="yield">Yield</string>
    <string name="size">Size</string>
    <string name="upload_success">Upload success</string>
    <string name="no_picture">No picture</string>
    <string name="upload_error">Upload error</string>
    <string name="date">Date</string>
    <string name="date_of_sowing">Date of Sowing</string>
    <string name="plant_height">Plant Height</string>
    <string name="stem_diameter">Stem Diameter</string>
    <string name="temperature">Temperature</string>
    <string name="address_error">Address Error</string>
    <string name="vs">VS</string>
    <string name="please_edit">Please edit first</string>
    <string name="add_crop">Add Crops</string>
    <string name="enter_crop_name">Please enter crop name</string>
    <string name="crop_name">Crops name:</string>
    <string name="add_crop_brand">Add crop brand</string>
    <string name="enter_crop_brand_name">Please enter crop brand name</string>
    <string name="brand_name">Brand name:</string>
    <string name="brand_name2">Brand name</string>
    <string name="please_enter_brand_name">Please enter brand name</string>
    <string name="please_edit_name">Please edit name</string>
    <string name="please_edit_brand">Please edit brand</string>
    <string name="please_edit_index_name">Please edit index name</string>
    <string name="please_edit_data">Please edit data first</string>
    <string name="new_plot">New plot</string>
    <string name="plot_name_already_exists">Plot name already exists</string>
    <string name="add_weather_data">Add weather data</string>
    <string name="change_pwd_success">Change password success</string>
    <string name="change_pwd_fail">Change password fail</string>
    <string name="change_pwd">C-PWD</string>
    <string name="new_pwd_not_null">New password not null</string>
    <string name="enter_the_same_pwd">Please enter the same password</string>
    <string name="edit_plot_info">Edit plot info</string>
    <string name="delete_success">Delete success</string>
    <string name="management_base">Base</string>
    <string name="management_grow_data">Management grow data</string>
    <string name="management_weather_data">Management weather data</string>
    <string name="weather_data">Weather data</string>
    <string name="land_location">Land location</string>
    <string name="land_location2">Land location:</string>
    <string name="choice_land_location">Please choice land location...</string>
    <string name="management_plot">Land</string>
    <string name="plot_base_info">Plot base info</string>
    <string name="user_info">User info</string>
    <string name="user_name">User name：</string>
    <string name="duty">Duty：</string>
    <string name="phone">Phone：</string>
    <string name="email">Email：</string>
    <string name="country">Country：</string>
    <string name="province_city">Province/City：</string>
    <string name="city_district">City/District：</string>
    <string name="land_name">Land name：</string>
    <string name="address">Address：</string>
    <string name="owner_name">Owner name：</string>
    <string name="please_fill_owner_name">Please fill owner name...</string>
    <string name="technician">Technician：</string>
    <string name="contact_number">Contact number：</string>
    <string name="please_fill_contact_number">Please fill contact number</string>
    <string name="frost_free_period">Frost free period：</string>
    <string name="fill_frost_free_period">Please fill frost free period...</string>
    <string name="effective_temperature">Effective temperature：</string>
    <string name="fill_effective_temperature">Please fill effective temperature...</string>
    <string name="annual_precipitation">Annual precipitation：</string>
    <string name="fill_annual_precipitation">Please fill annual precipitation...</string>
    <string name="soil_properties">Soil properties:</string>
    <string name="fill_soil_properties">Please fill soil properties...</string>
    <string name="soil_ph">Soil PH:</string>
    <string name="fill_soil_ph">Please fill soil PH...</string>
    <string name="npk_content">NPK content:</string>
    <string name="fill_npk_content">Please fill NPK content...</string>
    <string name="organic_matter_content">Organic matter content:</string>
    <string name="fill_organic_matter_content">Please fill organic matter content...</string>
    <string name="trace_element">Trace element:</string>
    <string name="fill_trace_element">Please fill trace element...</string>
    <string name="pre_crop_species">Pre crop species:</string>
    <string name="fill_pre_crop_species">Please fill pre crop species...</string>
    <string name="crop_yield">Crop yield:</string>
    <string name="fill_crop_yield">Please fill crop yield...</string>
    <string name="land_size">Land size:</string>
    <string name="fill_land_size">Please fill land size...</string>
    <string name="base_production">Base production:</string>
    <string name="fill_base_production">please fill base production...</string>
    <string name="remarks">Remarks:</string>
    <string name="fill_remarks">Please fill remarks...</string>
    <string name="click_refresh">Click to refresh</string>
    <string name="select_brand">Select brand:</string>
    <string name="plot_name">Plot name:</string>
    <string name="enter_plot_name">Please enter plot name...</string>
    <string name="plot_brief_introduction">Plot brief introduction:</string>
    <string name="enter_plot_brief_introduction">Please enter plot brief introduction...</string>
    <string name="users">Users:</string>
    <string name="sowing_time">Sowing time:</string>
    <string name="plot_size">Plot size:</string>
    <string name="enter_plot_size">Please enter plot size</string>
    <string name="plot_yield">Plot yield:</string>
    <string name="enter_plot_yield">Please enter plot yield</string>
    <string name="additive">Additive:</string>
    <string name="additive_concentration">Additive concentration:</string>
    <string name="enter_additive_concentration">Please enter additive concentration...</string>
    <string name="edit">Edit</string>
    <string name="consult_a_map">Consult a map</string>
    <string name="camera">Camera</string>
    <string name="select_from_album">Select from album</string>
    <string name="all">All</string>
    <string name="please_enter_crop_name">Please enter crop name</string>
    <string name="add_evaluation_index">Add evaluation index:</string>
    <string name="please_enter_evaluation_index_name">Please enter evaluation index name</string>
    <string name="please_enter_data_info">Please enter data info...</string>
    <string name="plot">Plot</string>
    <string name="plant_height_cm">Plant height(cm)</string>
    <string name="stem_diameter_mm">Stem diameter(mm)</string>
    <string name="buccal_number_per_plant">Buccal number per plant</string>
    <string name="wheat_plot_1">Wheat plot 1</string>
    <string name="plot_1">Plot 1</string>
    <string name="please_fill_growth_record">Please fill growth record...</string>
    <string name="plot_2">Plot 2</string>
    <string name="jointing">Jointing</string>
    <string name="growth_stage">Growth stage</string>
    <string name="daytime_weather">Daytime weather:</string>
    <string name="enter_daytime_weather">Please enter daytime weather</string>
    <string name="daytime_tem">Daytime temperature:</string>
    <string name="enter_daytime_tem">Please enter daytime temperature</string>
    <string name="evening_weather">Evening weather:</string>
    <string name="enter_evening_weather">Please enter evening weather</string>
    <string name="night_tem">Night temperature:</string>
    <string name="enter_night_tem">please enter night temperature</string>
    <string name="time">Time</string>
    <string name="weather_day">Weather(day)</string>
    <string name="tem_day">temperature(day)</string>
    <string name="weather_night">Weather(night)</string>
    <string name="tem_night">temperature(night)</string>
    <string name="click_select_location">Click to select location</string>
    <string name="exit">Exit</string>
    <string name="old_pwd">Old password:</string>
    <string name="enter_old_pwd">please enter old password...</string>
    <string name="new_pwd">New password:</string>
    <string name="enter_new_pwd">please enter new password...</string>
    <string name="pwd_confirmation">Password confirmation:</string>
    <string name="enter_pwd_confirmation">Please enter password confirmation...</string>
    <string name="loading">Loading</string>
    <string name="wheat">Wheat</string>
    <string name="delete">Delete</string>
    <string name="fill_the_base_name">Please fill the base name...</string>
    <string name="fill_the_base_address">Please fill the base address...</string>
    <string name="fill_the_user_name">Please fill the username...</string>
    <string name="fill_the_user_phone">Please fill the user phone...</string>
    <string name="fill_the_base_location">Please fill the base location</string>
    <string name="fill_the_base_size">Please fill the base size...</string>
    <string name="fill_the_base_yield">Please fill the base yield...</string>
    <string name="fill_the_base_picture">Please fill the base picture...</string>
    <string name="upload_error_retry">The submission failed. Please try again later</string>
    <string name="new_base">New base</string>
    <string name="base_management">Base</string>
    <string name="exit_press_again">Press again to exit the program</string>
    <string name="username_not_null">Username can not be empty</string>
    <string name="pwd_not_null">Password can not be empty</string>
    <string name="add_other_data">Add other data</string>
    <string name="edit_other_data">Edit other data</string>
    <string name="edit_grow_process">Edit growth process</string>
    <string name="add_grow_data">Addgrowth data</string>
    <string name="net_data_error">Network data failed, please try again later</string>
    <string name="is_exit">Whether to log out</string>
    <string name="search_result">Search result</string>
    <string name="input_search_content">Enter search content...</string>
    <string name="w_mu">M Mu</string>
    <string name="login_succeed">Login successful</string>
    <string name="user_name_error">wrong user name or password</string>
    <string name="only_choose_num">The number of available images is exceeded</string>
    <string name="invalidSD">Sdcard is invalid！</string>
</resources>