<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:src="@drawable/logo_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_UserName"
            style="@style/Widget_InputEditText"
            android:background="@drawable/input_edittext_bg"
            android:drawableLeft="@drawable/input_usename"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:maxLength="18"
            android:singleLine="true"
            android:textColor="@color/black_30" />

        <View
            android:layout_width="260dp"
            android:layout_height="1px"
            android:background="@color/grey_line" />

        <EditText
            android:id="@+id/login_Password"
            style="@style/Widget_InputEditText"
            android:background="@drawable/input_edittext_bg"
            android:drawableLeft="@drawable/input_password"
            android:drawablePadding="5dp"
            android:hint="@string/enter_user_pwd"
            android:maxLength="15"
            android:password="true"
            android:textColor="@color/black_30" />

        <CheckBox 
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:text="@string/remember_password"
            android:id="@+id/is_check"
            style="@style/CustomCheckboxTheme"
            android:paddingLeft="5dp"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_login_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
   <include
        android:id="@+id/layout_loading"
        layout="@layout/custom_loding_dialog_layout" 
        />
</RelativeLayout>