<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_top"
        layout="@layout/custom_commen_title"
        android:focusable="true" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/land_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="TextView"
                android:textColor="@color/black_20"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/plot_name"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <EditText
                    android:id="@+id/edit_plot_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/round_conner_line_white_bg"
                    android:gravity="start"
                    android:hint="@string/enter_plot_name"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="14dp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/plot_brief_introduction"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <EditText
                    android:id="@+id/edit_plot_info"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_below="@+id/layout_top"
                    android:layout_weight="2"
                    android:background="@drawable/round_conner_line_white_bg"
                    android:gravity="start"
                    android:hint="@string/enter_plot_brief_introduction"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="14dp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/crops"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/crops_type_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/add_crop_type"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/add_picture" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/select_brand"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/crops_brand_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/add_crop_brand"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/add_picture" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/users"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <Spinner
                    android:id="@+id/user_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/sowing_time"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/select_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_top"
                    android:layout_weight="2"
                    android:background="@drawable/round_conner_line_white_bg"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textSize="14dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/plot_size"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_plot_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="right"
                        android:hint="@string/enter_plot_size"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:textSize="14dp" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/mu"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/plot_yield"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_plot_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_conner_line_white_bg"
                        android:gravity="right"
                        android:hint="@string/enter_plot_yield"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:textSize="14dp" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/tun"
                        android:textColor="@color/black_20"
                        android:textSize="@dimen/text_size_17" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/additive"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <Spinner
                    android:id="@+id/additive_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/additive_concentration"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <EditText
                    android:id="@+id/edit_additive"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/layout_top"
                    android:layout_weight="2"
                    android:background="@drawable/round_conner_line_white_bg"
                    android:gravity="start"
                    android:hint="@string/enter_additive_concentration"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="14dp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/remarks"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />

                <EditText
                    android:id="@+id/edit_plot_mark"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_below="@+id/layout_top"
                    android:layout_weight="2"
                    android:background="@drawable/round_conner_line_white_bg"
                    android:gravity="start"
                    android:hint="@string/fill_remarks"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="14dp" >
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/net_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/wifi"
        android:gravity="center"
        android:text="@string/click_refresh"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_loading"
        layout="@layout/custom_loding_dialog_layout" />

</RelativeLayout>