<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/layout_top"
            layout="@layout/custom_commen_title"
            android:focusable="true" />
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/select_brand"
                    android:textColor="@color/black_20"
                    android:textSize="@dimen/text_size_17" />
                    <Spinner
                        android:id="@+id/crops_brand_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/plot_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/plot_name"
                android:textColor="@color/black_20"
                android:textSize="@dimen/text_size_17" />

            <EditText
                android:id="@+id/edit_plot_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_conner_line_white_bg"
                android:gravity="start"
                android:hint="@string/please_enter_crop_name"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textSize="14dp" >
            </EditText>
        </LinearLayout>
    </LinearLayout>
   <include
        android:id="@+id/layout_loading"
        layout="@layout/custom_loding_dialog_layout" />
</RelativeLayout>